--- a/games.html
+++ b/games.html
@@ -556,10 +556,13 @@
 
 <div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
 [5] Destruction AllStars
+[4] Days Gone
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [5] Maquette
+[5] Oddworld: Soulstorm
 [4] Remnant: From the Ashes
+[4] Zombie Army 4: Dead War
 </pre></div>
 
 <script>
