--- a/games.html
+++ b/games.html
@@ -5,139 +5,21 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>games</title>
-<link href="css/games.css" rel="stylesheet">
+<link href="games.css" rel="stylesheet">
 <script src="js/smartquotes.js"></script>
 </head>
 
 <body id="owned">
 
-<div id="psn"><header><b>PSN</b></header><pre>
-[4V] 2064: Read Only Memories $8
-[V] Actual Sunlight $2
-[4V] Alone With You $4
-[43V] Another World $7
-[4] Assassin's Creed IV: Black Flag $10
-[3] Batman: Arkham Asylum $5
-[4] Batman: Arkham Knight $9
-[3] Beyond Good & Evil $3
-[4V] Bit.Trip Presents Runner 2: Future Legend of Rhythm Alien $2
-[4] Bloodborne $8
-[3] Borderlands Bundle $21
-	Borderlands
-	Borderlands 2
-[4] Borderlands: The Handsome Collection $18
-	Borderlands 2
-	Borderlands: The Pre-Sequel
-[3] Braid $1
-[3] Catherine $7
-[43V] Cel Damage HD $3
-[4] Chambara $4
-[4] Clustertruck $6
-[43V] Cosmophony $2
-[3] Counter-Strike: Global Offensive $7
-[4] Dear Esther $3
-[4] Divekick $1
-[3] Echochrome $1
-[3] Enslaved: Odyssey to the West $5
-[4] Everybody's Gone to the Rapture $8
-[3] Far Cry 3 $5
-[3] Far Cry 3: Blood Dragon $4
-[43] Fibbage $2
-[4] Firewatch $18
-[43V] Flow $1
-[43V] Flower $2
-[V] Freedom Wars $5
-[3] Grand Theft Auto IV $15
-[4V] Grim Fandango Remastered $15
-[4V] Hatoful Boyfriend $5
-[4V] Home $1
-[43V] Hotline Miami
-[4] Inside $14
-[4] The Jackbox Party Pack $5
-[4] The Jackbox Party Pack 2 $5
-[43] Journey $7
-[3] Just Cause 2 $4
-[2] Katamari Damacy $1
-[V] Killzone: Mercenary $9
-[4] Last Day of June $11
-[3] The Last of Us $36
-	Season Pass $20
-[4] The Last of Us Remastered $11
-[4] Life Is Strange $10
-[4] Life Is Strange: Before the Storm $13
-[3] Mass Effect Trilogy $15
-	Mass Effect
-	Mass Effect 2
-	Mass Effect 3 
-[3] Max Payne 3 $8
-[V] Metal Gear Solid HD Collection $9
-	Metal Gear Solid 2: Sons of Liberty
-	Metal Gear Solid 3: Snake Eater
-[3] Mirror's Edge $2
-[4] Mirror's Edge Catalyst $12
-[V] Need for Speed: Most Wanted $5
-[4] Never Alone $4
-[4V] Nidhogg $5
-[3] Noby Noby Boy $1
-[3] Okami $7
-[43V] OlliOlli $3
-[4] Overcooked $20
-[4] Overwatch $35
-[4] Oxenfree $12
-[3] Papo & Yo $1
-[P] Persona $5
-[P] Persona 2: Innocent Sin $5
-[1] Persona 2: Eternal Punishment $4
-[2] Persona 3 FES $5
-[P] Persona 3 Portable $5
-[V] Persona 4: Dancing All Night $13
-[V] Persona 4 Golden $9
-[V] P3D & P5D Bundle $46
-	Persona 3: Dancing in Moonlight
-	Persona 5: Dancing in Starlight
-[4] Plants vs. Zombies: Garden Warfare
-[3] Prince of Persia Trilogy $8
-	Prince of Persia: The Sands of Time
-	Prince of Persia: Warrior Within
-	Prince of Persia: The Two Thrones
-[3] Prince of Persia: The Forgotten Sands $4
-[3] Red Dead Redemption $14
-[43V] Resogun
-[3] Sam & Max: Beyond Time and Space $1
-[3] Sam & Max: The Devil's Playhouse $1
-[4] Screencheat $6
-[3] Shadow of the Colossus $5
-[4] Sleeping Dogs $10
-[43V] Sound Shapes $7
-[43V] Spelunky $4
-[3] Stacking $4
-[43] Starwhal $3
-[V] Steins;Gate $3
-[3V] Stick It to the Man $6
-[4] Street Fighter V #60
-	Season Pass #30
-[4] Tacoma $10
-[4] Tales from the Borderlands $4
-[3] Tales of Monkey Island $1
-[V] Tearaway $20
-[3] Terraria $4
-[43V] Thomas Was Alone $3
-[V] Three Fourths Home $2
-[3] Tokyo Jungle $1
-[4] Tom Clancy's The Division 2 $3
-[4] Uncharted: The Nathan Drake Collection $8
-	Uncharted: Drake's Fortune
-	Uncharted 2: Among Thieves
-	Uncharted 3: Drake's Deception
-[43V] The Unfinished Swan $4
-[4] Virginia $5
-[4V] Volume $5
-[43] The Walking Dead $8
-[3] The Walking Dead: Season 2 $15
-[4] The Walking Dead: Michonne $5
-[4] What Remains of Edith Finch $11
-[3] The Wolf Among Us $9
-[V] Zero Escape: Zero Time Dilemma $12
+<div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
+[4] Days Gone
+[5] Destruction AllStars
+[4] Farpoint
+[4] Final Fantasy VII Remake
+[5] Maquette
+[5] Oddworld: Soulstorm
+[4] Remnant: From the Ashes
+[4] Zombie Army 4: Dead War
 </pre></div>
 
 <div id="plus"><header><b>Plus</b> <span>(2013–20)</span></header><pre>
@@ -554,15 +436,133 @@
 [3] Zone of the Enders HD Collection
 </pre></div>
 
-<div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
-[5] Destruction AllStars
-[4] Days Gone
-[4] Farpoint
-[4] Final Fantasy VII Remake
-[5] Maquette
-[5] Oddworld: Soulstorm
-[4] Remnant: From the Ashes
-[4] Zombie Army 4: Dead War
+<div id="psn"><header><b>PSN</b></header><pre>
+[4V] 2064: Read Only Memories $8
+[V] Actual Sunlight $2
+[4V] Alone With You $4
+[43V] Another World $7
+[4] Assassin's Creed IV: Black Flag $10
+[3] Batman: Arkham Asylum $5
+[4] Batman: Arkham Knight $9
+[3] Beyond Good & Evil $3
+[4V] Bit.Trip Presents Runner 2: Future Legend of Rhythm Alien $2
+[4] Bloodborne $8
+[3] Borderlands Bundle $21
+	Borderlands
+	Borderlands 2
+[4] Borderlands: The Handsome Collection $18
+	Borderlands 2
+	Borderlands: The Pre-Sequel
+[3] Braid $1
+[3] Catherine $7
+[43V] Cel Damage HD $3
+[4] Chambara $4
+[4] Clustertruck $6
+[43V] Cosmophony $2
+[3] Counter-Strike: Global Offensive $7
+[4] Dear Esther $3
+[4] Divekick $1
+[3] Echochrome $1
+[3] Enslaved: Odyssey to the West $5
+[4] Everybody's Gone to the Rapture $8
+[3] Far Cry 3 $5
+[3] Far Cry 3: Blood Dragon $4
+[43] Fibbage $2
+[4] Firewatch $18
+[43V] Flow $1
+[43V] Flower $2
+[V] Freedom Wars $5
+[3] Grand Theft Auto IV $15
+[4V] Grim Fandango Remastered $15
+[4V] Hatoful Boyfriend $5
+[4V] Home $1
+[43V] Hotline Miami
+[4] Inside $14
+[4] The Jackbox Party Pack $5
+[4] The Jackbox Party Pack 2 $5
+[43] Journey $7
+[3] Just Cause 2 $4
+[2] Katamari Damacy $1
+[V] Killzone: Mercenary $9
+[4] Last Day of June $11
+[3] The Last of Us $36
+	Season Pass $20
+[4] The Last of Us Remastered $11
+[4] Life Is Strange $10
+[4] Life Is Strange: Before the Storm $13
+[3] Mass Effect Trilogy $15
+	Mass Effect
+	Mass Effect 2
+	Mass Effect 3 
+[3] Max Payne 3 $8
+[V] Metal Gear Solid HD Collection $9
+	Metal Gear Solid 2: Sons of Liberty
+	Metal Gear Solid 3: Snake Eater
+[3] Mirror's Edge $2
+[4] Mirror's Edge Catalyst $12
+[V] Need for Speed: Most Wanted $5
+[4] Never Alone $4
+[4V] Nidhogg $5
+[3] Noby Noby Boy $1
+[3] Okami $7
+[43V] OlliOlli $3
+[4] Overcooked $20
+[4] Overwatch $35
+[4] Oxenfree $12
+[3] Papo & Yo $1
+[P] Persona $5
+[P] Persona 2: Innocent Sin $5
+[1] Persona 2: Eternal Punishment $4
+[2] Persona 3 FES $5
+[P] Persona 3 Portable $5
+[V] Persona 4: Dancing All Night $13
+[V] Persona 4 Golden $9
+[V] P3D & P5D Bundle $46
+	Persona 3: Dancing in Moonlight
+	Persona 5: Dancing in Starlight
+[4] Plants vs. Zombies: Garden Warfare
+[3] Prince of Persia Trilogy $8
+	Prince of Persia: The Sands of Time
+	Prince of Persia: Warrior Within
+	Prince of Persia: The Two Thrones
+[3] Prince of Persia: The Forgotten Sands $4
+[3] Red Dead Redemption $14
+[43V] Resogun
+[3] Sam & Max: Beyond Time and Space $1
+[3] Sam & Max: The Devil's Playhouse $1
+[4] Screencheat $6
+[3] Shadow of the Colossus $5
+[4] Sleeping Dogs $10
+[43V] Sound Shapes $7
+[43V] Spelunky $4
+[3] Stacking $4
+[43] Starwhal $3
+[V] Steins;Gate $3
+[3V] Stick It to the Man $6
+[4] Street Fighter V #60
+	Season Pass #30
+[4] Tacoma $10
+[4] Tales from the Borderlands $4
+[3] Tales of Monkey Island $1
+[V] Tearaway $20
+[3] Terraria $4
+[43V] Thomas Was Alone $3
+[V] Three Fourths Home $2
+[3] Tokyo Jungle $1
+[4] Tom Clancy's The Division 2 $3
+[4] Uncharted: The Nathan Drake Collection $8
+	Uncharted: Drake's Fortune
+	Uncharted 2: Among Thieves
+	Uncharted 3: Drake's Deception
+[43V] The Unfinished Swan $4
+[4] Virginia $5
+[4V] Volume $5
+[43] The Walking Dead $8
+[3] The Walking Dead: Season 2 $15
+[4] The Walking Dead: Michonne $5
+[4] What Remains of Edith Finch $11
+[3] The Wolf Among Us $9
+[V] Zero Escape: Zero Time Dilemma $12
 </pre></div>
 
 <script>
