--- a/games.played.html
+++ b/games.played.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>games.played</title>
-<link href="css/games.css" rel="stylesheet">
+<link href="games.css" rel="stylesheet">
 <script src="js/smartquotes.js"></script>
 </head>
 
