--- a/japan.html
+++ b/japan.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-<base href="https://alexhong.xyz/">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <title>/</title>
+<style>img{height:100px;}</style>
+<!--
 <link rel="stylesheet" href="files/css/index.css?1445139665"><style>#content>div{width:50%}</style>
 <script src="files/js/jquery-2.1.3.min.js"></script>
 <script src="files/js/functions.js?1477779727"></script>
-<meta name="apple-mobile-web-app-capable" content="yes">
 <style>
 .summary+* a{white-space:nowrap}
 .summary+* a[title]:after{display:inline;content:'\00a0'attr(title)}
@@ -48,6 +48,7 @@ if(text.indexOf('!')!=-1)$(this).addClass('important');
 //$('.budget').attr('data-after',' $'+sum($('.budget+* small'))[0][0]);
 //$('.itinerary').attr('data-after',' $'+Math.round(sum('.itinerary+* small',false,'¥')[0][0]/rate)+'+'+sum('.itinerary+* small')[0][0]+' ($'+Math.round(sum('.itinerary+*>li>ul>li:last-child small',false,'¥')[0][0]/rate)+'+'+(sum('.itinerary+*>li>ul>li:last-child small')[0][0])+')');
 });</script>
+-->
 </head>
 
 <body id="body-index" class="">
@@ -73,7 +74,6 @@ if(text.indexOf('!')!=-1)$(this).addClass('important');
 
 <ul>
 <li><img src="http://www.japan-guide.com/g8/2164_central_07.gif" alt="" /></li>
-<li><img src="japan-img/map02-1.jpeg" alt="" /></li>
 </ul></li>
 <li><a href="http://www.japan-guide.com/e/e3021.html">Tsukiji Market</a>
 
@@ -131,7 +131,6 @@ if(text.indexOf('!')!=-1)$(this).addClass('important');
 
 <ul>
 <li><img src="http://www.japan-guide.com/g8/2164_map_west_tokyo_01.gif" alt="" /></li>
-<li><img src="japan-img/map03-2.jpeg" alt="" /></li>
 </ul></li>
 <li>(-12) Shinjuku (<a href="http://www.japan-guide.com/e/e3051_shinjuku_half.html">half-day</a>)
 
@@ -348,11 +347,7 @@ if(text.indexOf('!')!=-1)$(this).addClass('important');
 <li><i>19:50 Nara > 21:21 Kyoto > 23:29 Kanazawa</i></li>
 <li><i>18:55,19:50 Nara > Kyoto > 20:19,21:18 Maibara (🍴 ekiben: kohoku no ohanashi) 20:56,21:56 > 22:50,23:48 Kanazawa</i></li>
 <li>7:30-25:00 🍴 Mister Donut Korinbo</li>
-<li><a href="http://www.freaks.ne.jp/katamachi/index.shtml"><em>Freaks Katamachi</em></a>, 1-5-20 Katamachi: yojikan&nbsp;&nbsp;<small>¥1300</small>
-
-<ul>
-<li><img src="http://www.freaks.ne.jp/katamachi/images/page2/katamachiryoukin.gif" alt="" /></li>
-</ul></li>
+<li><a href="http://www.freaks.ne.jp/katamachi/index.shtml"><em>Freaks Katamachi</em></a>, 1-5-20 Katamachi: yojikan&nbsp;&nbsp;<small>¥1300</small></li>
 </ul></li>
 <li><a href="http://www.japan-guide.com/e/e2167.html" title="••">Kanazawa</a>, <a href="http://www.japan-guide.com/e/e5950.html" title="••">Gokayama</a>
 
