--- a/games.html
+++ b/games.html
@@ -18,7 +18,10 @@
 [4] Final Fantasy VII Remake
 [5] Maquette
 [5] Oddworld: Soulstorm
+[5] Operation: Tango
 [4] Remnant: From the Ashes
+[4] Star Wars: Squadrons
+[4] Virtua Fighter 5 Ultimate Showdown
 [4] Zombie Army 4: Dead War
 </pre></div>
 
