--- a/games.html
+++ b/games.html
@@ -442,6 +442,7 @@
 <div id="psn"><header><b>PSN</b></header><pre>
 [4V] 2064: Read Only Memories $8
 [V] Actual Sunlight $2
+[4] AI: The Somnium Files $24
 [4V] Alone With You $4
 [43V] Another World $7
 [4] Assassin's Creed IV: Black Flag $10
