--- a/games.html
+++ b/games.html
@@ -12,6 +12,8 @@
 <body id="owned">
 
 <div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
+[5] A Plague Tale: Innocence
+[4] Call of Duty: Black Ops 4
 [4] Days Gone
 [5] Destruction AllStars
 [4] Farpoint
@@ -22,6 +24,7 @@
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
 [4] Virtua Fighter 5 Ultimate Showdown
+[4] WWE 2K Battlegrounds
 [4] Zombie Army 4: Dead War
 </pre></div>
 
