--- a/games.html
+++ b/games.html
@@ -18,11 +18,14 @@
 [5] Destruction AllStars
 [4] Farpoint
 [4] Final Fantasy VII Remake
+[54] Hunter's Arena: Legends
 [5] Maquette
 [5] Oddworld: Soulstorm
 [5] Operation: Tango
+[4] Plants vs. Zombies: Battle for Neighborville
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
+[4] Tennis World Tour 2
 [4] Virtua Fighter 5 Ultimate Showdown
 [4] WWE 2K Battlegrounds
 [4] Zombie Army 4: Dead War
