--- a/games.html
+++ b/games.html
@@ -18,11 +18,14 @@
 [5] Destruction AllStars
 [4] Farpoint
 [4] Final Fantasy VII Remake
+[4] Hitman 2
 [54] Hunter's Arena: Legends
 [5] Maquette
 [5] Oddworld: Soulstorm
 [5] Operation: Tango
+[5] Overcooked: All You Can Eat!
 [4] Plants vs. Zombies: Battle for Neighborville
+[4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
 [4] Tennis World Tour 2
