--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ body {
 	padding: 1.67em;
 }
 
+ul.small {
+	padding-top: 1.67em;
+	font-size: 75%;
+}
+
 @media only screen and (max-width: 400px) {
 	body { font-size: 18px; }
 }
@@ -44,6 +49,12 @@ a:hover, a:focus {
 <a href="mail&#116;o&#58;%6&#49;lexh&#37;&#54;Fn%&#54;7&#64;%&#54;&#67;i%73&#116;&#46;ru">&#97;le&#120;hong&#8202;&#64;&#8202;&#108;ist&#46;ru</a>
 <li><a href="https://www.facebook.com/alex.hong">facebook.com/alex.hong</a></li>
 <li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li>
+</ul>
+
+<ul class="small">
+<li><a href="wa/ht1.wastickers">/wa/ht1.wastickers</a></li>
+<li><a href="wa/ht2.wastickers">/wa/ht2.wastickers</a></li>
+<li><a href="wa/qq.wastickers">/wa/qq.wastickers</a></li>
 </ul>
 
 </body>
