--- a/index.html
+++ b/index.html
@@ -18,21 +18,16 @@
 body {
 	color: #404040;
 	background: #fff;
-	font: 24px/1.67 -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	padding: 1.67em;
+	font: 18px/1.67 -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	padding: 2.22em;
 }
 
-ul.small {
-	padding-top: 1.67em;
-	font-size: 75%;
-}
-
-@media only screen and (max-width: 400px) {
-	body { font-size: 18px; }
+ul {
+	margin-bottom: 1.67em;
 }
 
 a {
-	color: #0080ff;
+	color: #6080a0;
 	text-decoration: none;
 }
 
@@ -51,10 +46,15 @@ a:hover, a:focus {
 <li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li>
 </ul>
 
-<ul class="small">
-<li><a href="wa/ht1.wastickers">/wa/ht1.wastickers</a></li>
-<li><a href="wa/ht2.wastickers">/wa/ht2.wastickers</a></li>
-<li><a href="wa/qq.wastickers">/wa/qq.wastickers</a></li>
+<ul>
+<li><a href="https://getstickerpack.com">getstickerpack.com</a>
+	<ul>
+	<li><a href="wa/ht1.wastickers">⬇ (20) HelloTalk 1</a></li>
+	<li><a href="wa/ht2.wastickers">⬇ (24) HelloTalk 2</a></li>
+	<li><a href="wa/qq.wastickers">⬇ (23) QQ</a></li>
+	</ul>
+</li>
+
 </ul>
 
 </body>
