--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ a:hover:before, a:focus:before {
 <a href="mail&#116;o&#58;%6&#49;lexh&#37;&#54;Fn%&#54;7&#64;%&#54;&#67;i%73&#116;&#46;ru">&#97;le&#120;hong&#8202;&#64;&#8202;&#108;ist&#46;ru</a>
 <li><a href="https://www.facebook.com/alex.hong">facebook.com/alex.hong</a></li>
 <li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li>
+<li style="opacity:0.5"><a href="https://www.etsy.com/shop/ntifa">⏸️ etsy.com/shop/ntifa</a></li>
 </ul>
 
 <ul>
