--- a/games.html
+++ b/games.html
@@ -19,11 +19,14 @@
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [4] Hitman 2
+[5] Hell Let Loose
 [54] Hunter's Arena: Legends
 [5] Maquette
+[4] Mortal Kombat X
 [5] Oddworld: Soulstorm
 [5] Operation: Tango
 [5] Overcooked: All You Can Eat!
+[4] PGA Tour 2K21
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
