--- a/games.html
+++ b/games.html
@@ -18,9 +18,12 @@
 [5] Destruction AllStars
 [4] Farpoint
 [4] Final Fantasy VII Remake
+[54] First Class Trouble
 [4] Hitman 2
 [5] Hell Let Loose
 [54] Hunter's Arena: Legends
+[4] Kingdoms of Amalur: Re-Reckoning
+[54] Knockout City
 [5] Maquette
 [4] Mortal Kombat X
 [5] Oddworld: Soulstorm
