--- a/games.html
+++ b/games.html
@@ -19,13 +19,16 @@
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
+[54] Godfall: Challenger Edition
 [4] Hitman 2
 [5] Hell Let Loose
 [54] Hunter's Arena: Legends
 [4] Kingdoms of Amalur: Re-Reckoning
+[4] Lego DC Super-Villains
 [54] Knockout City
 [5] Maquette
 [4] Mortal Kombat X
+[4] Mortal Shell
 [5] Oddworld: Soulstorm
 [5] Operation: Tango
 [5] Overcooked: All You Can Eat!
