--- a/games.html
+++ b/games.html
@@ -15,7 +15,9 @@
 [5] A Plague Tale: Innocence
 [4] Call of Duty: Black Ops 4
 [4] Days Gone
+[54] Deep Rock Galactic
 [5] Destruction AllStars
+[54] Dirt 5
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
@@ -32,6 +34,7 @@
 [5] Oddworld: Soulstorm
 [5] Operation: Tango
 [5] Overcooked: All You Can Eat!
+[4] Persona 5 Strikers
 [4] PGA Tour 2K21
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
