--- a/games.html
+++ b/games.html
@@ -513,6 +513,7 @@
 [3] The Last of Us $36
 	Season Pass $20
 [4] The Last of Us Remastered $11
+[4] The Last of Us Part II $25
 [4] Life Is Strange $10
 [4] Life Is Strange: Before the Storm $13
 [3] Mass Effect Trilogy $15
