--- a/games.html
+++ b/games.html
@@ -18,6 +18,7 @@
 [54] Deep Rock Galactic
 [5] Destruction AllStars
 [54] Dirt 5
+[4] EA Sports UFC 4
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
@@ -36,11 +37,13 @@
 [5] Overcooked: All You Can Eat!
 [4] Persona 5 Strikers
 [4] PGA Tour 2K21
+[5] Planet Coaster
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
 [4] Tennis World Tour 2
+[4] Tiny Tina's Assault on Dragon Keep: A Wonderlands One-shot Adventure
 [4] Virtua Fighter 5 Ultimate Showdown
 [4] WWE 2K Battlegrounds
 [4] Zombie Army 4: Dead War
