--- a/games.html
+++ b/games.html
@@ -43,7 +43,7 @@
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
 [4] Tennis World Tour 2
-[4] Tiny Tina's Assault on Dragon Keep: A Wonderlands One-shot Adventure
+[4] Tiny Tina's Assault on Dragon Keep
 [4] Virtua Fighter 5 Ultimate Showdown
 [4] WWE 2K Battlegrounds
 [4] Zombie Army 4: Dead War
