--- a/games.html
+++ b/games.html
@@ -511,6 +511,7 @@
 [43] Journey $7
 [3] Just Cause 2 $4
 [2] Katamari Damacy $1
+[4] Kentucky Route Zero $15
 [V] Killzone: Mercenary $9
 [4] Last Day of June $11
 [3] The Last of Us $36
