--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
 <body id="owned">
 
 <div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
-[5] A Plague Tale: Innocence
+[4] Ark: Survival Evolved
 [4] Call of Duty: Black Ops 4
 [4] Days Gone
 [54] Deep Rock Galactic
@@ -22,6 +22,7 @@
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
+[5] Ghostrunner
 [54] Godfall: Challenger Edition
 [4] Hitman 2
 [5] Hell Let Loose
@@ -37,11 +38,13 @@
 [5] Overcooked: All You Can Eat!
 [4] Persona 5 Strikers
 [4] PGA Tour 2K21
+[5] A Plague Tale: Innocence
 [5] Planet Coaster
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
 [4] Star Wars: Squadrons
+[4] Team Sonic Racing
 [4] Tennis World Tour 2
 [4] Tiny Tina's Assault on Dragon Keep
 [4] Virtua Fighter 5 Ultimate Showdown
