--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a:hover:before, a:focus:before {
 <a href="mail&#116;o&#58;%6&#49;lexh&#37;&#54;Fn%&#54;7&#64;%&#54;&#67;i%73&#116;&#46;ru">&#97;le&#120;hong&#8202;&#64;&#8202;&#108;ist&#46;ru</a>
 <!-- <li><a href="https://www.facebook.com/alex.hong">facebook.com/alex.hong</a></li> -->
 <!-- <li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li> -->
-<li><a href="https://www.etsy.com/shop/ntifa">etsy.com/shop/ntifa</a></li>
+<li><a style="opacity: 0.5" href="https://www.etsy.com/shop/ntifa">⏸️ etsy.com/shop/ntifa</a></li>
 </ul>
 
 <ul>
@@ -61,7 +61,6 @@ a:hover:before, a:focus:before {
 	<ul>
 	<li><a href="wa/ht1.wastickers">(20) HelloTalk 1</a></li>
 	<li><a href="wa/ht2.wastickers">(24) HelloTalk 2</a></li>
-	<li><a href="wa/qq.wastickers">(23) QQ</a></li>
 	</ul>
 </li>
 
