--- a/vax.html
+++ b/vax.html
@@ -11,7 +11,7 @@ html, body{
 	height: 100%;
 }
 body {
-	background: #fff url('vax.png') center no-repeat;
+	background: #fff url('vax.png') top no-repeat;
 	background-size: contain;
 }
 </style>
