--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
-<title>Alex Hong</title>
+<title>[ᴇɴᴛʀᴇɢᴀʟᴇx]</title>
 <script>if (location.host && location.pathname != '/') location.replace('.')</script>
 <style>
 
@@ -18,17 +18,34 @@
 body {
 	color: #c0c0c0;
 	background: #000;
-	font: 18px/1.67 -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	padding: 2.22em;
+	font: 24px/1.67 -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	padding: 3.33em 1.67em;
+	text-align: center;
 }
 
-ul {
+h2 {
+	font-size: 100%;
+	font-weight: normal;
+	white-space: nowrap;
+}
+
+h2:before,
+h2:after{
+	font-size: 32px;
+	line-height: 0;
+	position: relative;
+	top: 4px;
+}
+
+.ent:before { content: "🇺🇸"; margin-right: 0.31em; }
+.ent:after  { content: "🇵🇪"; margin-left: 0.31em; }
+
+p, ul {
 	margin-bottom: 1.67em;
 }
 
 a {
 	color: inherit;
-	text-decoration: none;
 }
 
 li li a:before {
@@ -49,26 +66,25 @@ a:hover:before, a:focus:before {
 
 <body>
 
-<ul>
-<a href="mail&#116;o&#58;%6&#49;lexh&#37;&#54;Fn%&#54;7&#64;%&#54;&#67;i%73&#116;&#46;ru">&#97;le&#120;hong&#8202;&#64;&#8202;&#108;ist&#46;ru</a>
-<li><a href="https://www.etsy.com/shop/ntifa">etsy.com/shop/ntifa</a></li>
-<!-- <li><a style="opacity: 0.5" href="https://www.etsy.com/shop/ntifa">⏸️ etsy.com/shop/ntifa</a></li> -->
-<li><a href="https://www.facebook.com/alex.hong">facebook.com/alex.hong</a></li>
-<li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li>
-
-</ul>
-
-<!--
-<ul>
+<h2 class="ent">ENTREG<b>ALEX</b></h2>
+<p>
+	<a href="https://wa.me/15106766288">whatsapp</a> &nbsp;/&nbsp;
+	<a href="https://www.instagram.com/entregalex/">instagram</a>
+</p>
+<h2>Alex 洪 (personal)</h2>
+<p>
+	<a href="https://www.facebook.com/alex.hong/">facebook</a>  &nbsp;/&nbsp;
+	<a href="https://www.instagram.com/modestmaoist/">instagram</a>
+</p>
+<p><a style="opacity:0.5;text-decoration:none" href="https://www.etsy.com/shop/ntifa">⏸️&nbsp;&nbsp;etsy.com/shop/ntifa</a></p>
+<!-- <ul>
 <li><a href="https://getstickerpack.com">getstickerpack.com</a>
 	<ul>
-	<li><a href="wa/ht1.wastickers">(20) HelloTalk 1</a></li>
-	<li><a href="wa/ht2.wastickers">(24) HelloTalk 2</a></li>
+		<li><a href="wa/ht1.wastickers">(20) HelloTalk 1</a></li>
+		<li><a href="wa/ht2.wastickers">(24) HelloTalk 2</a></li>
 	</ul>
 </li>
--->
-
-</ul>
+</ul> -->
 
 </body>
 
