--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 <title>[ᴇɴᴛʀᴇɢᴀʟᴇx]</title>
 <script>if (location.host && location.pathname != '/') location.replace('.')</script>
 <style>
+/* rubik-regular - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+       url('fonts/rubik-v21-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/rubik-v21-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* rubik-700 - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+       url('fonts/rubik-v21-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/rubik-v21-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
 * { 
 	margin: 0; 
@@ -18,7 +36,7 @@
 body {
 	color: #c0c0c0;
 	background: #000;
-	font: 24px/1.67 -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 24px/1.67 Rubik, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	padding: 3.33em 1.67em;
 	text-align: center;
 }
@@ -42,6 +60,7 @@ h2:after{
 
 p, ul {
 	margin-bottom: 1.67em;
+	white-space: nowrap;
 }
 
 a {
@@ -61,6 +80,14 @@ a:hover:before, a:focus:before {
 	opacity: 1;
 }
 
+a.paused {
+	opacity: 0.5;
+	text-decoration: none;
+}
+
+a.paused:before { content: "⏸️"; margin-right: 0.31em; }
+a.paused:after  { content: "⏸️"; margin-left: 0.31em; }
+
 </style>
 </head>
 
@@ -68,15 +95,15 @@ a:hover:before, a:focus:before {
 
 <h2 class="ent">ENTREG<b>ALEX</b></h2>
 <p>
-	<a href="https://wa.me/15106766288">whatsapp</a> &nbsp;/&nbsp;
+	<a href="https://wa.me/15106766288">whatsapp</a> ·
 	<a href="https://www.instagram.com/entregalex/">instagram</a>
 </p>
 <h2>Alex 洪 (personal)</h2>
 <p>
-	<a href="https://www.facebook.com/alex.hong/">facebook</a>  &nbsp;/&nbsp;
+	<a href="https://www.facebook.com/alex.hong/">facebook</a> ·
 	<a href="https://www.instagram.com/modestmaoist/">instagram</a>
 </p>
-<p><a style="opacity:0.5;text-decoration:none" href="https://www.etsy.com/shop/ntifa">⏸️&nbsp;&nbsp;etsy.com/shop/ntifa</a></p>
+<p><a class="paused" href="https://www.etsy.com/shop/ntifa">etsy: ntifa</a></p>
 <!-- <ul>
 <li><a href="https://getstickerpack.com">getstickerpack.com</a>
 	<ul>
