--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ h2 {
 	white-space: nowrap;
 }
 
+p+h2 { margin-top:  1.67em; }
+
 h2:before,
 h2:after{
 	font-size: 32px;
@@ -77,7 +79,6 @@ h2:after{
 .ent:after  { content: "🇵🇪"; margin-left: 0.31em; }
 
 p, ul {
-	margin-bottom: 1.67em;
 	white-space: nowrap;
 }
 
