--- a/vax.html
+++ b/vax.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <title></title>
 <style>
 html, body{
