--- a/vax.html
+++ b/vax.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="vax-icon.png">
 <title></title>
 <style>
 html, body{
