--- a/vax.html
+++ b/vax.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="apple-touch-icon" href="vax-icon.png">
-<title></title>
+<title>Vax</title>
 <style>
 html, body{
 	height: 100%;
