--- a/vax/index.html
+++ b/vax/index.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="apple-touch-icon" href="vax-icon.png">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <title>Vax</title>
 <style>
 html, body{
 	height: 100%;
 }
 body {
-	background: #fff url('vax.png') top no-repeat;
+	background: #fff url('vax-record.png') top no-repeat;
 	background-size: contain;
 }
 </style>
