--- a/vax/index.html
+++ b/vax/index.html
@@ -13,7 +13,7 @@ html, body{
 	height: 100%;
 }
 body {
-	background: #fff url('vax-record.png') top no-repeat;
+	background: #fff url('vax-record.gif') top no-repeat;
 	background-size: contain;
 }
 </style>
