--- a/50best/asia2022.html
+++ b/50best/asia2022.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1 id="title"><span>Asia’s</span> 100 Best Restaurants <i>2022</i></h1>
+<h1 id="title"><b>Asia’s</b> <span>100 Best Restaurants <i>2022</i></span></h1>
 <ol>
 	<li>
 		<img src="https://www.theworlds50best.com/asia/en/filestore/png/Den-Dish-1.png"/>
