--- a/50best/latam2022.html
+++ b/50best/latam2022.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1 id="title"><span>Latin America’s</span> 100 Best Restaurants <i>2022</i></h1>
+<h1 id="title"><b>Latin America’s</b> <a href="https://www.google.com/maps/d/edit?mid=1x24v39qxTOLaqnd9LeDZVwJkA6uUldw">📍</a> <span>100 Best Restaurants <i>2022</i></span></h1>
 <ol>
 	<li class="v">
 		<img src="https://www.theworlds50best.com/latinamerica/en/filestore/jpg/LatAm50BR22-Central-Dish-1.jpg"/>
