--- a/index.html
+++ b/index.html
@@ -88,17 +88,18 @@ a.paused:after  { content: "⏸️"; margin-left: 0.31em; }
 
 <body>
 
-<h2>🐸&nbsp;&nbsp;<b>Alex 洪</b>&nbsp;&nbsp;📷</h2>
+<h2><!-- 🐸&nbsp;&nbsp; --><b>ALEX 洪</b><!-- &nbsp;&nbsp;📷 --></h2>
 <p>
-	<a href="https://www.facebook.com/alex.hong/">facebook</a> ·
-	<a href="https://www.instagram.com/modestmaoist/">instagram</a>
+	<a href="https://www.instagram.com/modestmaoist/">insta</a> ·
+	<a href="https://www.facebook.com/alex.hong/">fb</a> ·
+	<a href="https://www.etsy.com/shop/ntifa">etsy</a>
 </p>
-<p class="fade"><a class="paused" href="https://www.etsy.com/shop/ntifa">etsy: ntifa</a></p>
-<h2 class="ent">🇺🇸&nbsp;&nbsp;ENTREG<b>ALEX</b>&nbsp;&nbsp;🇵🇪</h2>
+<!-- <p><a href="https://www.etsy.com/shop/ntifa">etsy</a></p> -->
+<h2><!-- 🇺🇸&nbsp;&nbsp; -->[ENTREG<b>ALEX</b>]<!-- &nbsp;&nbsp;🇵🇪 --></h2>
 <p>
 	<a href="https://wa.me/15106766288">whatsapp</a>
 </p>
-<p class="fade">prox viaje: por determinar</p>
+<!-- <p class="fade">prox viaje: por determinar</p> -->
 
 <script>
 var hash = window.location.hash.substr(1);
