--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@ a.paused:after  { content: "⏸️"; margin-left: 0.31em; }
 <h2><!-- 🐸&nbsp;&nbsp; --><b>ALEX 洪</b><!-- &nbsp;&nbsp;📷 --></h2>
 <p>
 	<a href="https://www.instagram.com/modestmaoist/">insta</a> ·
-	<a href="https://www.facebook.com/alex.hong/">fb</a> ·
+	<a href="https://www.facebook.com/alex.hong/">face</a> ·
 	<a href="https://www.etsy.com/shop/ntifa">etsy</a>
 </p>
 <!-- <p><a href="https://www.etsy.com/shop/ntifa">etsy</a></p> -->
 <h2><!-- 🇺🇸&nbsp;&nbsp; -->[ENTREG<b>ALEX</b>]<!-- &nbsp;&nbsp;🇵🇪 --></h2>
 <p>
-	<a href="https://wa.me/15106766288">whatsapp</a> ·
+	<a href="https://wa.me/15106766288">whats</a> ·
 	<a href="https://grabr.io/es/users/558064">grabr</a>
 </p>
 <!-- <p class="fade">prox viaje: por determinar</p> -->
