--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a:hover:before, a:focus:before {
 <ul>
 	<li><a href="https://www.instagram.com/modestmaoist/"><span>insta</span> 📷</a></li>
 	<li><a href="https://www.facebook.com/alex.hong/"><span>face</span> 🐸</a></li>
-	<li><a href="https://bsky.app/profile/ojito.bsky.social"><span>bsky</span> 🦋</a></li>
+	<li><a href="https://staging.bsky.app/profile/ojito.bsky.social"><span>bsky</span> 🦋</a></li>
 </ul>
 <ul>
 	<li></li>
