--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@ a:hover:before, a:focus:before {
 
 <h2>ALEX 洪</h2>
 <ul>
-	<li><a href="https://www.instagram.com/modestmaoist/"><span>insta</span> 📷</a></li>
-	<li><a href="https://www.facebook.com/alex.hong/"><span>face</span> 🐸</a></li>
-	<li><a href="https://staging.bsky.app/profile/ojito.bsky.social"><span>bsky</span> 🦋</a></li>
+	<li><a href="https://staging.bsky.app/profile/ojito.cam"><span>bsky</span> 🦋</a></li>
+	<li><a href="https://www.flickr.com/photos/ojitocam/"><span>flickr</span> 📷</a></li>
+	<li><a href="https://www.instagram.com/modestmaoist/"><span>insta</span> 😶</a></li>
+	<!-- <li><a href="https://www.facebook.com/alex.hong/"><span>face</span> 🐸</a></li> -->
 </ul>
 <ul>
 	<li></li>
