--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <title>[ᴇɴᴛʀᴇɢᴀʟᴇx]</title>
-<script>if (location.host && location.pathname != '/') location.replace('.')</script>
 <style>
 /* rubik-regular - latin */
 @font-face {
@@ -86,7 +85,8 @@ p, ul {
 	white-space: nowrap;
 }
 
-a:hover:before, a:focus:before {
+a:hover:before,
+a:focus:before {
 	opacity: 1;
 }
 
@@ -101,15 +101,14 @@ a:hover:before, a:focus:before {
 
 <h2>ALEX 洪</h2>
 <ul>
+	<li><a href="https://ojito.cam/"><span>ojito</span> 📷</a></li>
 	<li><a href="https://staging.bsky.app/profile/ojito.cam"><span>bsky</span> 🦋</a></li>
-	<li><a href="https://www.flickr.com/photos/ojitocam/"><span>flickr</span> 📷</a></li>
-	<li><a href="https://www.instagram.com/modestmaoist/"><span>insta</span> 😶</a></li>
-	<!-- <li><a href="https://www.facebook.com/alex.hong/"><span>face</span> 🐸</a></li> -->
+	<li><a href="https://www.etsy.com/shop/ntifa"><span>etsy</span> 🌙</a></li>
 </ul>
 <ul>
-	<li></li>
-	<li><a href="https://www.etsy.com/shop/ntifa">🌙 <span>etsy</span></a></li>
-	<li><a href="https://grabr.io/es/users/558064">📦 <span>grabr</span></a></li>
+	<li><a href="https://www.instagram.com/modestmaoist/">🫥 <span>insta</span></a></li>
+	<li><a href="https://www.facebook.com/alex.hong/">🐸 <span>face</span></a></li>
+	<!-- <li><a href="https://grabr.io/es/users/558064">📦 <span>grabr</span></a></li> -->
 	<li><a href="https://offerup.com/p/86128331">🏷️ <span>offerup</span></a></li>
 </ul>
 
